Fixed some vertical spacing issues.

--- a/src/stylesheets/partials/navbar.less
+++ b/src/stylesheets/partials/navbar.less
@@ -15,13 +15,6 @@
 }
 
 .navbar {
-	/* Formatting on larger screens. */
-	@media (min-width: @screen-sm-min) {
-
-		margin-bottom: (@line-height-computed * 8);
-
-	}
-
 	@media (min-width: @grid-float-breakpoint) {
 
 		/* Double Height The Navbar. */
